/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package test

import (
	"context"
	"flag"
	"log"
	"testing"
	"time"
)

import (
	"github.com/stretchr/testify/assert"
	"google.golang.org/grpc"
)

import (
	pb "github.com/apache/dubbo-go-pixiu/samples/http/grpc/proto"
)

var (
	addr = flag.String("addr", "localhost:8881", "the address to connect to")
	name = flag.String("name", "world", "Name to greet")
)

func TestGet(t *testing.T) {
	flag.Parse()
	// Set up a connection to the server.
	conn, err := grpc.Dial(*addr, grpc.WithInsecure())
	if err != nil {
		log.Fatalf("did not connect: %v", err)
	}
	defer conn.Close()
	c := pb.NewUserProviderClient(conn)

	// Contact the server and print out its response.
	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()
	r, err := c.GetUser(ctx, &pb.GetUserRequest{UserId: 1})
	assert.NoError(t, err)
	assert.Equal(t, "user(s) query successfully", r.Message)
}
